--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/js": "^9.20.0",
+    "@types/shelljs": "^0.8.15",
     "eslint": "^9.20.1",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
