--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-api-cli",
+  "name": "express-api-cli-tool",
   "version": "1.0.0",
   "author": "Thomas Alberto",
   "description": "Express API CLI is a Command Line Interface (CLI) tool designed to make it easier and faster to create RESTful API projects using Express JS.",
