chore: add changelog, update docs and add prefer global

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Thomas Alberto",
   "description": "Express API CLI is a Command Line Interface (CLI) tool designed to make it easier and faster to create RESTful API projects using Express JS.",
   "license": "ISC",
+  "preferGlobal": true,
   "keywords": [
     "express",
     "cli",
