chore: add repository and homepage

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/xRiot45/express-cli"
   },
-  "homepage": "https://github.com/xRiot45/express-cli/blob/main/README.md",
+  "homepage": "https://github.com/xRiot45/express-cli",
   "keywords": [
     "express",
     "cli",
