--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "express-api-cli-tool",
-  "version": "1.2.5",
+  "version": "2.0.0",
   "author": "Thomas Alberto",
   "description": "Express API CLI is a Command Line Interface (CLI) tool designed to make it easier and faster to create RESTful API projects using Express JS.",
-  "license": "ISC",
+  "license": "MIT",
   "preferGlobal": true,
   "repository": {
     "type": "git",
